--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="max-w-4xl mx-auto px-4 text-center">
       <h3 class="text-3xl font-bold mb-6">Get in Touch</h3>
       <p class="text-gray-300 mb-4">Have a project or want to connect? Drop me a message.</p>
-      <a href="mailto:hello@mohamednaser.com" class="text-blue-400 hover:underline text-lg">hello@mohamednaser.com</a>
+      <a href="mailto:mohamed.naser.awd@gmail.com" class="text-blue-400 hover:underline text-lg">mohamed.naser.awd@gmail.com</a>
     </div>
   </section>
 
